# expense-manager

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Makefile  Procfile.dev  README.md  app.py  database.py  expense_manager.db  fly.toml  models.py  pyproject.toml  requirements.txt  test_app.py
backend/: .env.example  Dockerfile  cloudbuild.yaml  pyproject.toml
backend/app/: main.py
backend/app/ai/: context.py  orchestrator.py
backend/app/ai/prompts/: __init__.py  system_prompt.md
backend/app/ai/tools/: draft_handlers.py  read_handlers.py  registry.py
backend/app/api/v1/: __init__.py  accounts.py  accruals.py  ai.py  approval_rules.py  attachments.py  audit.py  auth.py  bank_feeds.py  bank_reconciliation.py  bills.py  budgets.py  consolidation.py  fx.py  (+26 more)
backend/app/audit/: emitter.py
backend/app/core/: config.py  db.py  logging.py  mfa.py  permissions.py  security.py  telemetry.py  tenant.py
backend/app/infra/: models.py
backend/app/services/: accounts.py  accruals.py  anomaly.py  approval_rules.py  audit.py  auth.py  bank_feeds.py  bank_import.py  bank_reconciliation.py  bills.py  budgets.py  consolidation.py  contacts.py  csv_import.py  email_service.py  evidence_package.py  expense_claims.py  feature_flags.py  fixed_assets.py  fx.py  invoice_portal.py  invoice_templates.py  invoices.py  items.py  journals.py  kyc.py  management_accounts.py  onboarding.py  payments.py  payroll.py  periods.py  projects.py  receipts.py  reports.py  sanctions.py  search.py  sync.py  tax_codes.py  tenant_settings.py  users.py
backend/app/workers/: fx_rate_fetcher.py  reminders.py  sanctions_refresh.py  settings.py  verify_audit_chain.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_base_schema.py  0002_ledger_accounts_periods_fx.py  0003_journal_entries.py  0004_transactions.py  0005_rls_security.py  0006_bank_and_expenses.py  0007_ai_conversations.py  0008_audit_phase4.py  0009_mobile_sync.py  0010_kyc.py  0011_sanctions_lists.py  0012_invoice_reminder_fields.py  0012_receipts.py  0013_invoice_reminder_fields.py  0014_sales_chain.py  0015_invoices_add_approval_threshold.py  0016_accounts_add_is_control_account.py  0017_payments_add_idempotency_key.py  0018_bank_txn_unique_journal_line.py  0019_journal_entries_add_idempotency_key.py  0020_fx_rate_columns_and_consolidation.py  0020_tenants_add_invoice_number_seq.py  0021_contacts_add_credit_limit.py  0022_invoices_add_credit_note_for_id.py  0023_contacts_add_risk_rating.py  0024_contact_ubos.py  0025_journal_maker_checker.py  0026_period_close_checklist.py  0027_tenants_add_setup_completed_at.py  0028_invoices_add_portal_columns.py  0029_add_accruals_table.py  0030_add_fixed_assets_table.py  0031_add_salary_records_table.py  0032_date_columns_string_to_date.py  0033_fixed_assets_date_column.py  0034_fx_rate_columns_and_consolidation.py  0035_enable_rls_missing_tables.py  0036_add_budgets_tables.py  0036_add_settings_and_tax_columns.py  0036_bank_feed_connections.py  (+31 more)
backend/scripts/: migrate_prod.sh  seed.py  seed_demo.py
backend/tests/: conftest.py
backend/tests/integration/: test_ledger_integration.py  test_opensanctions_default_integration.py
backend/tests/property/: test_money_properties.py
backend/tests/unit/: test_account_validation_docs.py  test_account_validation_journals.py  test_accruals.py  test_aging_drilldown.py  test_aging_pagination.py  test_ai_orchestrator.py  test_ai_tools.py  test_approval_rules.py  test_archived_contact_guard.py  test_audit_events_financial.py  test_auth_signup.py  test_bank_feeds.py  test_bank_reconciliation_unique.py  test_bank_txn_dedup.py  test_bank_txn_duplicate_match.py  test_budgets.py  test_bulk_actions.py  test_coa_templates.py  test_consolidation.py  test_control_accounts.py  test_credit_limit.py  test_credit_note.py  test_date_columns.py  test_date_order_validation.py  test_dnfbp_classification.py  test_duplicate_contact.py  test_duplicate_receipt.py  test_expense_claim_currency.py  test_expense_claim_date_validation.py  test_expense_claim_self_approval.py  test_fixed_assets.py  test_fx_rate_fetcher.py  test_fx_rounding.py  test_fx_service.py  test_global_search.py  test_invoice_approval.py  test_invoice_number_sequence.py  test_invoice_pdf_renderer.py  test_invoice_portal.py  test_invoice_templates.py  (+34 more)
(+117 files in other folders)
