[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Expense Manager"
bundle = "com.expensemanager"
version = "1.0.0"
url = "https://github.com/yourusername/expense-manager"
license = "MIT License"
author = "Your Name"
author_email = "your.email@example.com"

[tool.briefcase.app.expense_manager]
formal_name = "Expense Manager"
description = "A comprehensive expense tracking application"
icon = "icon"
sources = ["."]
requires = [
    "toga-ios",
    "sqlalchemy",
    "pandas",
    "matplotlib",
    "python-dateutil",
]

[tool.briefcase.app.expense_manager.macOS]
requires = [
    "toga-macos",
    "sqlalchemy",
    "pandas",
    "matplotlib",
    "python-dateutil",
]

[tool.briefcase.app.expense_manager.linux]
requires = [
    "toga-linux",
    "sqlalchemy",
    "pandas",
    "matplotlib",
    "python-dateutil",
]

[tool.briefcase.app.expense_manager.windows]
requires = [
    "toga-winforms",
    "sqlalchemy",
    "pandas",
    "matplotlib",
    "python-dateutil",
]

# iOS specific configuration
[tool.briefcase.app.expense_manager.iOS]
supported_families = ["iPhone", "iPad"]
minimum_ios_version = "12.0"
requires = [
    "toga-ios",
    "sqlalchemy",
    "pandas",
    "matplotlib",
    "python-dateutil",
]

[tool.briefcase.app.expense_manager.iOS.provisioning]
adhoc = false
