[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-erp-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    # Auth / Security
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "pyotp>=2.9.0",
    "webauthn>=2.2.0",
    # Redis / Queue
    "redis>=5.2.0",
    "arq>=0.26.0",
    # Storage
    "boto3>=1.35.0",
    # AI
    "anthropic>=0.40.0",
    # Observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.17.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Utils
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "hypothesis>=6.115.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "factory-boy>=3.3.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
    "types-pytz",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # bugbear
    "SIM",       # simplify
    "S",         # bandit (security)
    "ANN",       # annotations
]
ignore = [
    "S101",  # assert in tests is fine
    "ANN101","ANN102",  # self/cls
    "ANN401",  # Any — handled by mypy
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN"]

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["webauthn.*", "arq.*"]
ignore_missing_imports = true

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
